--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 
 .todoList {
   width: 300px;
-  margin: 2vw 2vw;
 }
 
 .todoList > div {
@@ -16,17 +15,14 @@
 
 }
 
-.filter-active {
-  background-color: green;
-}
-
-.error {
-  border-color: red;
-}
 .todoList-task.done {
   opacity: 0.5;
 }
 
-.AddTask {
-   margin: 2vw 2vh;
+.filter-active {
+  background-color: blue;
+}
+
+.error {
+  border-color: red;
 }
